--- a/Wrangle-report (1).html
+++ b/Wrangle-report (1).html
@@ -14604,12 +14604,17 @@ After assessing i proceeded to cleaning the data. I made a copy first to preserv
 <p>Quality issues:</p>
 <p>Twitter_archive</p>
 <ul>
-<li>Keep only original ratings that have images.</li>
-<li>Delete columns that won’t be used for the analysis.</li>
-<li>Correct numerators (outliers) and convert to float</li>
-<li>Convert denominators to float</li>
-<li>Correct the incorrect dogs names; Error in dog names (e.g a,an,actually) are not a dog's name.</li>
-<li>Erroneous datatypes (Change tweet_id from type interger to object type, change 'timestamp' from object to datetime).</li>
+<li>Keep only original ratings that have images.
+This was done by first using value count to know how many rows have retweets with value_counts(), and filtering by only selecting columns that have null retweets with pd.isnull()</li>
+<li>Delete columns that won’t be used for the analysis.
+Columns not needed were dropped to reduce 'noise' and focus on the more important data</li>
+<li>Correct numerators (decimal data incorrectly recorded) and convert to float</li>
+<li>Convert denominators to float
+Some data were not properly recorded like those that had decimals, it was corrected and the datatypes were changed to floats</li>
+<li>Correct the incorrect dogs names; Error in dog names (e.g a,an,actually) are not a dog's name.
+Incorrect dog names were removed</li>
+<li>Erroneous datatypes (Change tweet_id from type interger to object type, change 'timestamp' from object to datetime).
+Data types were corrected</li>
 </ul>
 <p>Image Predictions</p>
 <ul>
@@ -14625,7 +14630,8 @@ After assessing i proceeded to cleaning the data. I made a copy first to preserv
 <p>Twitter Archive</p>
 <ul>
 <li>Separate timestamp into day -month -year.</li>
-<li>doggo, floofer, pupper and puppo columns in twitter_archive table should be merged into one column named "dog_stage"</li>
+<li>doggo, floofer, pupper and puppo columns in twitter_archive table should be merged into one column named "dog_stage"
+Different dog stages were merged into a single column</li>
 </ul>
 <p>Image Predictions</p>
 <ul>
@@ -14635,6 +14641,7 @@ After assessing i proceeded to cleaning the data. I made a copy first to preserv
 <ul>
 <li>Merge with Twitter Archive</li>
 </ul>
+<p>All 3 tables were merged into 1</p>
 <h3 id="Limitations">Limitations<a class="anchor-link" href="#Limitations">&#182;</a></h3><p>I had few challenges while cleaning my data, these challenges include:</p>
 <ul>
 <li>Getting a twitter api key
@@ -14646,6 +14653,22 @@ I initally didn't understand how to query the json file until it was explained b
 </div>
 </div>
 </div>
+</div><div class="jp-Cell jp-CodeCell jp-Notebook-cell jp-mod-noOutputs  ">
+<div class="jp-Cell-inputWrapper">
+<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
+</div>
+<div class="jp-InputArea jp-Cell-inputArea">
+<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[&nbsp;]:</div>
+<div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
+     <div class="CodeMirror cm-s-jupyter">
+<div class=" highlight hl-ipython3"><pre><span></span> 
+</pre></div>
+
+     </div>
+</div>
+</div>
+</div>
+
 </div>
 </body>
 
